[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuteliq"
version = "1.2.0"
description = "Official Python SDK for Tuteliq - AI-powered child safety API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tuteliq", email = "sales@tuteliq.ai" }
]
keywords = [
    "tuteliq",
    "child-safety",
    "content-moderation",
    "bullying-detection",
    "grooming-detection",
    "ai",
    "sdk",
    "parental-control",
    "online-safety"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://tuteliq.ai"
Documentation = "https://api.tuteliq.ai/docs"
Repository = "https://github.com/Tuteliq/python"
Issues = "https://github.com/Tuteliq/python/issues"

[tool.hatch.build.targets.wheel]
packages = ["tuteliq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
